# firewalla_unofficial_sdk

./: .coverage  .env  .gitignore  LICENSE  README.md  alarms.py  boxes.py  coverage.lcov  coverage.xml  devices.py  firewalla.py  flows.py  fw_statistics.py  pyproject.toml  requirements.txt  rules.py  target_lists.py  trends.py
.github/workflows/: ci.yml
classes/: alarms.py  base.py  boxes.py  devices.py  flows.py  fw_statistics.py  rules.py  target_lists.py  trends.py
examples/: __init__.py  usage.py
src/firewalla_unofficial_sdk/: __init__.py  main.py
tests/: target_lists.py  test_firewalla.py
